--- a/CheckYourEligibility-FrontEnd/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Shared/_Layout.cshtml
@@ -1,49 +1,128 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="govuk-template">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CheckYourEligibility_FrontEnd</title>
+    <meta charset="utf-8">
+    <title>@ViewData["Title"]  - Check and apply for school and childcare support - GOV.UK</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="theme-color" content="#0b0c0c">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="~/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="~/css/govuk-frontend.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CheckYourEligibility_FrontEnd.styles.css" asp-append-version="true" />
+    <link href="~/css/application.css" rel="stylesheet" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CheckYourEligibility_FrontEnd</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+
+<body class="govuk-template__body  js-enabled">
+    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+    @*         <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+    *@
+    <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
+
+    <header class="dfe-header" role="banner">
+        <div class="dfe-width-container dfe-header__container">
+            <div class="dfe-header__logo">
+                <a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
+                    <img src="~/images/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
+                    <img src="~/images/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+                    <span class="dfe-header__service-name">
+                        @ViewData["ServiceName"]
+                    </span>
+                </a>
             </div>
-        </nav>
+            <div class="dfe-header__content" id="content-header">
+                <ul class="dfe-header__action-links"></ul>
+            </div>
+        </div>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+    <div class="app-phase-banner__wrapper">
+        <div class="govuk-phase-banner app-phase-banner govuk-width-container">
+            <p class="govuk-phase-banner__content">
+                <strong class="govuk-tag govuk-phase-banner__content__tag">
+                    beta
+                </strong>
+                <span class="govuk-phase-banner__text">
+                    This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+                </span>
+            </p>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - CheckYourEligibility_FrontEnd - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+    <main role="main">
+        <div class="govuk-width-container ">
+            <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
+            <main class="govuk-main-wrapper " id="main-content" role="main">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        @RenderBody()
+                    </div>
+                </div>
+            </main>
+        </div>
+    </main>
+
+
+    <footer class="govuk-footer " role="contentinfo">
+        <div class="govuk-width-container ">
+
+            <div class="govuk-footer__meta">
+                <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+
+                    <h2 class="govuk-visually-hidden">Footer links</h2>
+
+                    <ul class="govuk-footer__inline-list">
+
+                        <li class="govuk-footer__inline-list-item">
+                            <a class="govuk-footer__link" href="../privacy">
+                                Privacy policy
+                            </a>
+                        </li>
+
+                        <li class="govuk-footer__inline-list-item">
+                            <a class="govuk-footer__link" href="../accessibility">
+                                Accessibility
+                            </a>
+                        </li>
+
+                        <li class="govuk-footer__inline-list-item">
+                            <a class="govuk-footer__link" href="../cookies">
+                                Cookies
+                            </a>
+                        </li>
+
+                        <li class="govuk-footer__inline-list-item">
+                            <a class="govuk-footer__link" href="../contact">
+                                Contact us
+                            </a>
+                        </li>
+                    </ul>
+                    <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+                        <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"></path>
+                    </svg>
+                    <span class="govuk-footer__licence-description">
+
+                        All content is available under the
+                        <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+                    </span>
+                </div>
+                <div class="govuk-footer__meta-item">
+                    <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">© Crown copyright</a>
+                </div>
+            </div>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="module" src="~/js/govuk-frontend.min.js"></script>
+    <script type="module">
+        import { initAll } from '../js/govuk-frontend.min.js'
+        initAll()
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
