--- a/CheckYourEligibility-FrontEnd/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Home/Index.cshtml
@@ -122,7 +122,7 @@
                     <li>to tell us details about any children you want to get free school meals, including the name of their school</li>
                 </ul>
 
-                <a asp-controller="Home" asp-action="Check_Details" role="button" class="govuk-button govuk-button--start" data-module="govuk-button">Start Now
+                <a asp-controller="Check" asp-action="Enter_Details" role="button" class="govuk-button govuk-button--start" data-module="govuk-button">Start Now
                     <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
                     </svg>
