--- a/CheckYourEligibility-FrontEnd/Views/Shared/_ValidationSummary.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Shared/_ValidationSummary.cshtml
@@ -17,7 +17,7 @@
         .OrderBy(x => formFields.IndexOf(x.Field));
 }
 
-<div class="govuk-error-summary" data-module="govuk-error-summary">
+<div id="error-summary" class="govuk-error-summary" data-module="govuk-error-summary">
     <div role="alert">
         <h2 class="govuk-error-summary__title">There is a problem</h2>
         <div class="govuk-error-summary__body">
