--- a/CheckYourEligibility-FrontEnd/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Shared/_Layout.cshtml
@@ -75,21 +75,15 @@
                     <ul class="govuk-footer__inline-list">
 
                         <li class="govuk-footer__inline-list-item">
-                            <a class="govuk-footer__link" href="../privacy">
-                                Privacy policy
-                            </a>
+                            <a class="govuk-footer__link" href="@Url.Action("Privacy", "Home")">Privacy policy</a>
                         </li>
 
                         <li class="govuk-footer__inline-list-item">
-                            <a class="govuk-footer__link" href="../accessibility">
-                                Accessibility
-                            </a>
+                            <a class="govuk-footer__link" href="@Url.Action("Accessibility", "Home")">Accessibility</a>
                         </li>
 
                         <li class="govuk-footer__inline-list-item">
-                            <a class="govuk-footer__link" href="../cookies">
-                                Cookies
-                            </a>
+                            <a class="govuk-footer__link" href="@Url.Action("Cookies", "Home")">Cookies</a>
                         </li>
 
                         <li class="govuk-footer__inline-list-item">
