--- a/CheckYourEligibility-FrontEnd/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Home/Cookies.cshtml
@@ -3,15 +3,123 @@
     ViewData["Title"] = "Cookies";
 }
 
-<div class="govuk-width-container ">
-    <main class="govuk-main-wrapper " id="main-content" role="main">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">
-                    Cookies
-                </h1>
-                <p>Cookies content</p>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
+
+<p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
+<p>We use cookies to make 'Connect families to support' work and collect information about how you use this website.</p>
+
+<h2 class="govuk-heading-m govuk-!-margin-top-6">Essential cookies</h2>
+
+<p class="govuk-body">Essential cookies:</p>
+<ul class="govuk-list govuk-list--bullet">
+    <li>keep your information secure while you use Connect families to support</li>
+    <li>help us understand how you use the website, so we can make improvements</li>
+    <li>temporarily store the selections you make</li>
+    <li>remember what notifications you've seen, so you're not shown them more than once</li>
+</ul>
+<p>We do not need to ask permission to use them.</p>
+
+<table class="govuk-table">
+    <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Name</th>
+            <th scope="col" class="govuk-table__header">Purpose</th>
+            <th scope="col" class="govuk-table__header">Expires</th>
+        </tr>
+    </thead>
+    <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">service_directory_cookies_policy</td>
+            <td class="govuk-table__cell">Saves your cookie consent settings</td>
+            <td class="govuk-table__cell">1 year</td>
+        </tr>
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">.AspNetCore.Antiforgery.[random number]</td>
+            <td class="govuk-table__cell">Prevents malicious activity while you’re using the website</td>
+            <td class="govuk-table__cell">When you leave the website</td>
+        </tr>
+    </tbody>
+</table>
+
+<h2 class="govuk-heading-m govuk-!-margin-top-6">Analytics cookies (optional)</h2>
+<p>With your permission, we use Google Analytics to collect data about how you use Connect families to support. This information helps us to improve our service.</p>
+<p>Google is not allowed to use or share our analytics data with anyone.</p>
+<p>Google Analytics stores anonymised information about:</p>
+<ul class="govuk-list govuk-list--bullet">
+    <li>how you got to Connect families to support</li>
+    <li>the pages you visit on Connect families to support and how long you spend on them</li>
+    <li>any errors you see while using Connect families to support</li>
+</ul>
+
+<table class="govuk-table" aria-label="Cookies that measure website usage">
+    <thead class="govuk-table__head">
+        <tr>
+            <th scope="col" class="govuk-table__header">
+                Name
+            </th>
+            <th scope="col" class="govuk-table__header">
+                Purpose
+            </th>
+            <th scope="col" class="govuk-table__header">
+                Expires
+            </th>
+        </tr>
+    </thead>
+    <tbody class="govuk-table__body">
+        <tr>
+            <td class="govuk-table__cell">
+                _ga
+            </td>
+            <td class="govuk-table__cell">
+                Helps count how many people visit this site by tracking if you’ve visited before
+            </td>
+            <td class="govuk-table__cell">
+                2 years
+            </td>
+        </tr>
+        <tr>
+            <td class="govuk-table__cell">
+                _ga_[random number]
+            </td>
+            <td class="govuk-table__cell">
+                Generates statistics about how you use the website
+            </td>
+            <td class="govuk-table__cell">
+                2 years
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-l">Change your cookie settings</h2>
+        <form method="post" class="js-cookies-page-form" novalidate="">
+            <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset js-cookies-page-form-fieldset" id="analytics">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                        Do you want to accept analytics cookies?
+                    </legend>
+                    <div class="govuk-radios" data-module="govuk-radios">
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="analytics-cookies-yes" name="analytics" type="radio" value="true">
+                            <label class="govuk-label govuk-radios__label" for="analytics-cookies-yes">
+                                Yes
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="analytics-cookies-no" name="analytics" type="radio" value="false" checked="">
+                            <label class="govuk-label govuk-radios__label" for="analytics-cookies-no">
+                                No
+                            </label>
+                        </div>
+                    </div>
+                </fieldset>
             </div>
-        </div>
-    </main>
+            <button class="govuk-button js-cookies-form-button" data-module="govuk-button">
+                Save cookie settings
+            </button>
+            <input name="__RequestVerificationToken" type="hidden" value="CfDJ8DhiDDhPVfJAmQYKTI1c_nzy9aR1Bca6WIENRtR3YId7eNQs2HE5BN_t4uriq1tJx1UgCyxaS9-jUy7z_8v0z2vYYAAlwsVaQY7AvX45vtNrICDdDJ2U1NhkWoswstYaYJqaHAEflYXNaSl_tJZTvlg">
+        </form>
+    </div>
 </div>
