Update model on new stubs

--- a/CheckYourEligibility-FrontEnd/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Check/Check_Answers.cshtml
@@ -1,4 +1,4 @@
-﻿@model CheckYourEligibility_FrontEnd.ViewModels.ParentDetailsViewModel
+﻿@model CheckYourEligibility_FrontEnd.Models.FsmApplication
 
 @{
     ViewData["Title"] = "Check Answers";
