remove usings not being used and fix routing when adding a child on enter child details page

--- a/CheckYourEligibility-FrontEnd/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-FrontEnd/Views/Check/Enter_Child_Details.cshtml
@@ -126,7 +126,7 @@
 
     <div class="add-button-container">
         <div class="moj-button-action">
-            <button asp-controller="Check" asp-action="Add_Child" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4" data-module="govuk-button">
+            <button asp-controller="Check" method="post" type="submit" asp-action="Add_Child" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4" data-module="govuk-button">
                 Add another child
             </button>
         </div>
