--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
-    <title>@ViewData["Title"]  - Check and apply for school and childcare support - GOV.UK</title>
+    <title>@ViewData["Title"] `Home - Check and apply for school and childcare support - GOV.UK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#0b0c0c">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,9 +31,42 @@
                 </a>
             </div>
             <div class="dfe-header__content" id="content-header">
-                <ul class="dfe-header__action-links"></ul>
+                <ul class="dfe-header__action-links">
+                    <li>
+                        <a href="/" class="govuk-link govuk-link--inverse">My account</a>
+                    </li>
+                    <li>
+                        <a href="../../" class="govuk-link govuk-link--inverse">Sign out</a>
+                    </li>
+                </ul>
+                <div class="dfe-header__menu">
+                    <button class="dfe-header__menu-toggle" id="toggle-menu" aria-controls="header-navigation" aria-expanded="false">Menu</button>
+                </div>
             </div>
         </div>
+        <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
+            <div class="dfe-width-container">
+                <p class="dfe-header__navigation-title">
+                    <span id="label-navigation">Menu</span>
+                    <button class="dfe-header__navigation-close" id="close-menu">
+                        <svg class="dfe-icon dfe-icon__close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="27" height="27">
+                            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"></path>
+                        </svg>
+                        <span class="govuk-visually-hidden">Close menu</span>
+                    </button>
+                </p>
+                <ul class="dfe-header__navigation-list">
+                    <li class="dfe-header__navigation-item ">
+                        <a class="dfe-header__navigation-link" href="dashboard">
+                            Dashboard
+                            <svg class="dfe-icon dfe-icon__chevron-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
+                                <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <div class="app-phase-banner__wrapper">
@@ -50,18 +83,16 @@
     </div>
 
 
-    <main role="main">
-        <div class="govuk-width-container ">
-            <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
-            <main class="govuk-main-wrapper " id="main-content" role="main">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
-                    </div>
+    <div class="govuk-width-container ">
+        <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
+        <main class="govuk-main-wrapper " id="main-content" role="main">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    @RenderBody()
                 </div>
-            </main>
-        </div>
-    </main>
+            </div>
+        </main>
+    </div>
 
 
     <footer class="govuk-footer " role="contentinfo">
@@ -112,6 +143,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="module" src="~/js/govuk-frontend.min.js"></script>
+    <script src="~/js/dfefrontend.js"></script>
     <script type="module">
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
