--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model CheckYourEligibility_FrontEnd.Models.Parent
+﻿@model CheckYourEligibility_FrontEnd.Models.ParentGuardian
 
 @{
     ViewData["Title"] = "Check Details";
