replace script tag with js file

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -142,16 +142,4 @@
 
 <script src="/js/validationSummary.js"></script>
 <script src="/js/schoolSearch.js"></script>
-
-@section Scripts {
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Select all input fields with IDs starting with 'ChildList' and ending with 'FirstName'
-            var inputs = document.querySelectorAll("input[id^='ChildList'][id$='FirstName']");
-            // Focus on the last input field
-            if (inputs.length > 0) {
-                inputs[inputs.length - 1].focus();
-            }
-        });
-    </script>
-}
+<script src="/js/focusChildNameInput.js"></script>
