--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -2,6 +2,7 @@
 @model CheckYourEligibility.Domain.Responses.ApplicationSaveItemResponse
 
 @{
+    Layout = "~/Views/Shared/_LayoutNoBackButton.cshtml";
     ViewData["Title"] = "Application Sent";
     ViewData["ServiceName"] = "Check a family's eligibility";
 
@@ -15,8 +16,9 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<!-- hide back button as we don't want people resubmitting applications, go to start again page? -->
+<h1 class="govuk-heading-xl">Children Details Added</h1>
 
+<p>We have sent details for: </p>
 <table>
     <thead>
         <tr>
@@ -40,11 +42,9 @@
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
+    <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-l">What happens next</h2>
         <p>The school will email you when they have registered your details, and will arrange for your children's free school meals to start.</p>
-        <p>If you do not receive an update in 5 working days talk to the school administrator.</p>
-        <p><a href="account/signin-or-create">Sign out</a></p>
     </div>
 </div>
 
