--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -89,7 +89,7 @@
             </h2>
             <ul class="govuk-summary-card__actions">
                 <li class="govuk-summary-card__action">
-                    <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden">Child details</span></a>
+                    @Html.ActionLink("Change", "ChangeChildDetails")
                 </li>
 
             </ul>
