Schools Journey current progress

--- a/CheckYourEligibility-Admin/Views/School/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Outcome/Eligible.cshtml
@@ -6,7 +6,7 @@
 
     <p>Select 'Add children's details' on this page and provide the information requested.</p>
 
-    <form action="Enter_Child_Details" method="post" novalidate>
+    <form action="Enter_Child_Details" novalidate>
         <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
             Add children's details
         </button>
