--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="govuk-grid-column-full">
+﻿@model string
+
+<div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">Your children are entitled to free school meals</h1>
 
 
@@ -15,9 +17,5 @@
 
 
 
-    <form action="account/signin-or-create" method="post" novalidate>
-        <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-            Go to OneGov
-        </button>
-    </form>
+    <a href="@Model" class="govuk-button govuk-!-margin-top-5">Go to OneGov</a>
 </div>
